# aigbb-devcontainer

./: README.md  azure.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/hooks/: postprovision.sh
infra/modules/ai/: hub.bicep  project.bicep
notebooks/: SampleNotebook.ipynb
