[project]
name = "aigbb-devcontainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv >=1.0.1,<1.2.0",
    "ipykernel >=6.29.5,<7.0.0",
    "ipywidgets >=8.1.5,<9.0.0",
    "azure-ai-projects>=1.0.0b6",
    "azure-identity>=1.20.0",
    "openai>=1.63.0",
]
